Доработка методов в FilmService и UserController